[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/actors/Stats.gd" type="Script" id=1]
[ext_resource path="res://src/actors/tall_bug.gd" type="Script" id=2]
[ext_resource path="res://assets/actors/enemy.png" type="Texture" id=3]
[ext_resource path="res://src/other/hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/other/SoftCollision.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/other/PlayerDetection.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/other/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/other/WanderManager.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.58784, 5.87146 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.7472
height = 10.8351

[sub_resource type="CircleShape2D" id=3]
radius = 303.155

[sub_resource type="CircleShape2D" id=4]
radius = 3.39023

[sub_resource type="CircleShape2D" id=5]
radius = 3.89982

[sub_resource type="Animation" id=7]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 3, 6 ]
}

[node name="tall_bug_lvl3" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )
speed = 80
max_speed = 40

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.201916, -15.9852 )
texture = ExtResource( 3 )
vframes = 9
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.241557, -5.80057 )
shape = SubResource( 1 )

[node name="hurtbox" parent="." instance=ExtResource( 4 )]
collision_mask = 0

[node name="hutbox_shape" parent="hurtbox" index="0"]
position = Vector2( 0, -7.98851 )
shape = SubResource( 2 )

[node name="Stats" type="Node" parent="."]
script = ExtResource( 1 )

[node name="PlayerDetection" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
modulate = Color( 0.827451, 0.168627, 0.941176, 0.435294 )
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -4.77585 )

[node name="Hitbox" parent="Position2D" instance=ExtResource( 7 )]
position = Vector2( 0, 5.38454 )
collision_layer = 0
collision_mask = 64

[node name="hitbox_shape" parent="Position2D/Hitbox" index="0"]
position = Vector2( 1.54646, -5.34515 )
shape = SubResource( 4 )
disabled = false

[node name="SoftCollision" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
modulate = Color( 0.545098, 0.0313726, 0.635294, 1 )
position = Vector2( 0, -2.107 )
shape = SubResource( 5 )

[node name="WanderManager" parent="." instance=ExtResource( 8 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 7 )
anims/run = SubResource( 6 )

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_no_health"]

[editable path="hurtbox"]
[editable path="PlayerDetection"]
[editable path="Position2D/Hitbox"]
[editable path="SoftCollision"]
